# Backend

./: .coverage  .gitignore  Dockerfile  README.md  date_process.py  docker-compose.yml  env-ejemplo.txt  firebase-adminsdk.json  main.py  notification_process.py  pyproject.toml  requirements.txt  test_access.py  test_main.py
config/: organizer.py  user.py
controllers/: access.py  organizer_access.py  user_access.py
models/: organizer.py  user.py
objects/: jwt.py
routes/: access.py  organizer_access.py  user.py  user_access.py
src/config/: attendance.py  authorizer.py  calendar.py  complaint.py  db.py  event.py  faq.py  favorite.py  image.py  notifications.py  organizer.py  relations.py  reservation.py  section.py  statistics.py  suspension.py  user.py
src/controllers/: event.py  faq.py  image.py  organizer_access.py  user_access.py  validations.py
src/models/: attendance.py  authorizer.py  calendar.py  complaint.py  event.py  event_authorizer.py  faq.py  favorites.py  image.py  organizer.py  reservation.py  section.py  suspension.py  user.py
src/objects/: jwt.py
src/routes/: authorizer.py  authorizer_access.py  event.py  faq.py  faqs.py  images.py  organizer_access.py  organizer_event.py  user_access.py  user_event.py
src/schemas/: attendance.py  authorizer.py  complaint.py  coordinate.py  event.py  faq.py  image.py  qr.py  (+7 more)
tests/: setUp.py  test_access.py  test_attendances.py  test_authorizer.py  test_calendar.py  test_complaints.py  test_event.py  test_faq.py  test_favorites.py  test_images.py  test_moderation.py  test_statistics.py  test_user.py
(+50 files in other folders)
